# con2phys_data_to_nwb

./: .gitignore  LICENSE  README.md  config.yaml  demo_stream_to_pynapple.ipynb  pyproject.toml
src/con2phys_to_nwb/: convert.py  download.py  io.py
